--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -128,8 +128,8 @@ input, select {
 }
 
 label {
-  text-transform: capitalize;
-  font-size: 16px;
+  text-transform: uppercase;
+  font-size: 15px;
   font-weight: 600;
   opacity: 0.5;
   display: block;
