--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -2,7 +2,7 @@
   --text-color:#495057;
   --text-color-secondary:#6c757d;
   --border-radius: 6px;
-  --primary-color:#3B82F6;
+  --primary-color:#FF5880;
   --primary-color-text:#ffffff;
   --surface-ground:#eff3f8;
   --surface-section:#ffffff;
